--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="gen.js"></script>
+    <!-- <link rel="javascript" href="index.js"> -->
     <title>Quote Generator</title>
 </head>
 <body>
+    <h1>Good Morning</h1>
+    <p id="Date"></p>
+    <script> document.getElementById("Date").innerHTML ="Today's date is: " + date1;</script>
+
+    <button onclick="quoteRefresh()">Refresh Quote</button>
+
+
+    <div> </div>
+    <div></div>
 
 </body>
 </html>
