--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="jquery-3.4.0.min.js"></script>
     <script src="gen.js"></script>
     <!-- <link rel="javascript" href="index.js"> -->
     <title>Quote Generator</title>
@@ -16,7 +17,14 @@
     <button onclick="quoteRefresh()">Refresh Quote</button>
 
 
-    <div> </div>
+    <div class= "weather-container"> </div>
+    <img class= "icon">
+    <p class="weather"></p>
+    <p class ="temp"></p>
+    <p class ="time"></p>
+    <p class ="sunrise"></p>
+    <p class="sunset"></p>
+
     <div></div>
 
 </body>
