shows weather type and farenheight with degree

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class= "weather-container"> </div>
     <img class= "icon">
     <p class="weather"></p>
-    <p class ="temp"></p>
+    <p class ="temp" + &deg></p>
     <p class ="time"></p>
     <p class ="sunrise"></p>
     <p class="sunset"></p>
